--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div>
             <img src="img/hint.png" 
              data-bs-toggle="popover" data-bs-trigger="hover focus" title="Atenção/Uwaga/Attention"
-                data-bs-content="Caso informe uma palavra e ela estiver errada você perde o jogo."/>
-
+             data-bs-html="true"
+             data-bs-content="<ul><li>Caso informe uma palavra e ela estiver errada você perde o jogo.</li></ul>"/>
         </div>
         <div class="container-fluid">
             <div class="row">
@@ -66,6 +66,14 @@
                             </table>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-3">
+                    <img src="img/hint-ideia.png" id="hint" 
+                    data-bs-toggle="popover" data-bs-trigger="hover focus" title="Atenção/Uwaga/Attention"
+                    data-bs-content="'" data-bs-html="true" />
                 </div>
             </div>
 
