code improvement preparing to validate all words to finish the game

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6">
+                <div class="col-3">
                     <div id="divResponsive" class="parent-responsive">
                         <img class="parent-img-responsible" src="img/forca.png"/>
                         <img id="playerStatus" class="body-img" src="img/0.png" />
                     </div>
 
                 </div>
-                <div class="col-5">
+                <div class="col-9">
                     <div class="row">
                         <table class="table">
                             <tbody>
@@ -66,6 +66,17 @@
                             </table>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-3 form-check" style="margin-left: 20px;">
+                        <input class="form-check-input" type="checkbox" disabled value="allWords" id="allWords">
+                        <label class="form-check-label" for="allWords">
+                            Finalizar o jogo quando acertar em todos o idiomas
+                        </label>
+
+
                 </div>
             </div>
 
