layout enhancement Improving losing mesage

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
     
         <div class="container">
-            <div id="resultLose" style="display: none;" class="fw-bold fs-3 box overlay box-lose"></div>
+            <div id="resultLose" style="display: none;" class="fs-5 box overlay box-lose"></div>
             <div id="resultWin" style="display: none;" class="fw-bold fs-3 box overlay box-win"></div>
           </div>
 <!-- https://www.w3schools.com/html/tryit.asp?filename=tryhtml_responsive_picture -->
