improving layout updating database

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="row">
                 <div class="col-3">
                     <img src="img/hint-ideia.png" id="hint" 
-                    data-bs-toggle="popover" data-bs-trigger="hover focus" title="Atenção/Uwaga/Attention"
+                    data-bs-toggle="popover" data-bs-trigger="hover focus" title="Dica/Por/Hint"
                     data-bs-content="'" data-bs-html="true" />
                 </div>
             </div>
