--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt_br">
     <head>
 
         <meta charset="UTF-8"/>
@@ -9,6 +9,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link href="css/styles.css" rel="stylesheet" >
 
+        <title>Hangman</title>
     </head>
 
     <body>
@@ -20,7 +21,7 @@
 <!-- https://www.w3schools.com/html/tryit.asp?filename=tryhtml_responsive_picture -->
 
         <div>
-            <img src="img/hint.png" 
+            <img src="img/hint.png" alt=""
              data-bs-toggle="popover" data-bs-trigger="hover focus" title="Atenção/Uwaga/Attention"
              data-bs-html="true"
              data-bs-content="<ul><li>Caso informe uma palavra e ela estiver errada você perde o jogo.</li></ul>"/>
@@ -29,40 +30,36 @@
             <div class="row">
                 <div class="col-3">
                     <div id="divResponsive" class="parent-responsive">
-                        <img class="parent-img-responsible" src="img/forca.png"/>
-                        <img id="playerStatus" class="body-img" src="img/0.png" />
+                        <img class="parent-img-responsible" src="img/forca.png" alt=""/>
+                        <img id="playerStatus" class="body-img" src="img/0.png" alt="" />
                     </div>
 
                 </div>
                 <div class="col-9">
                     <div class="row">
                         <table class="table">
-                            <tbody>
-                                <tr id="ptRow">
-                                    <td style="">
-                                        <img src="img/brazil.png"/>
-                                    </td>
-                                </tr>
-                                <tr id="plRow">
-                                    <td>
-                                        <img src="img/poland.png"/>
-                                    </td>
-                                </tr>
-                                <tr id="usRow">
-                                    <td>
-                                        <img src="img/usa.png" />
-                                    </td>
-                                </tr>
-                            </tbody>
+                            <tr id="ptRow">
+                                <td>
+                                    <img src="img/brazil.png" alt=""/>
+                                </td>
+                            </tr>
+                            <tr id="plRow">
+                                <td>
+                                    <img src="img/poland.png" alt=""/>
+                                </td>
+                            </tr>
+                            <tr id="usRow">
+                                <td>
+                                    <img src="img/usa.png" alt="" />
+                                </td>
+                            </tr>
                         </table>
                     </div>
                     <div class="row">
                         <div class="col-12">
                             <div><h3>Letras informadas</h3></div>
                             <table class="table">
-                                <tbody>
-                                    <tr><td class="fs-3" id="inputedLetters"></td></tr>
-                                </tbody>
+                                <tr><th class="fs-3" id="inputedLetters"></th></tr>
                             </table>
                         </div>
                     </div>
@@ -80,7 +77,7 @@
 
             <div class="row">
                 <div class="col-3">
-                    <img src="img/hint-ideia.png" id="hint" 
+                    <img src="img/hint-ideia.png" id="hint"  alt=""
                     data-bs-toggle="popover" data-bs-trigger="hover focus" title="Dica/Por/Hint"
                     data-bs-content="'" data-bs-html="true" />
                 </div>
