Small improvments with JS

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <link href="css/styles.css" rel="stylesheet" >
 
         <title>Hangman</title>
+        <script src="scripts/hangman.js" defer></script>
+        
+
     </head>
 
     <body>
@@ -100,7 +103,6 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         
-        <script src="scripts/hangman.js"></script> 
 
         <script>
 
@@ -130,8 +132,11 @@
                 }
             });
 
+            document.addEventListener("DOMContentLoaded", function(){
+                start();  
+            });
 
-            start();
+
         </script>
     </body>
 </html>
