Supporting more fields to multi language

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
             <div class="container-fluid">
                 <div class="form-check form-check-inline">
-                    <h3><label id="language"></label></h3>
+                    <h5><label id="language"></label></h5>
                 </div>
                 <div class="form-check form-check-inline">
                     <input type="radio" name="options" class="form-check-input" 
@@ -87,7 +87,7 @@
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <div><h3>Letras informadas</h3></div>
+                            <div><h3 id="inputedLettersTitle"></h3></div>
                             <table class="table">
                                 <tr><th class="fs-3" id="inputedLetters"></th></tr>
                             </table>
