some adjustments and improvment on pick up words

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
         <link href="css/styles.css" rel="stylesheet" >
 
         <title>Hangman</title>
+        <script src="scripts/database.js" defer></script>
         <script src="scripts/hangman.js" defer></script>
         <script src="scripts/language.js" defer></script>
+        
         
 
     </head>
