UI improvemtns to get hints

--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
             <div class="col-3">
                 <img src="img/hint-ideia.png" id="hint" alt="" data-bs-toggle="popover" data-bs-trigger="hover focus"
                     title="Dica/Por/Hint" data-bs-content="'" data-bs-html="true" />
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left"
+                        viewBox="0 0 16 16">
+                        <path fill-rule="evenodd"
+                            d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+                    </svg>
+                    <small id="tapForHint"><em>Tap for hint</em></small>
+                </span>
             </div>
         </div>
     </div>
@@ -188,7 +196,6 @@
 
             var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
             var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-
                 return new bootstrap.Popover(popoverTriggerEl)
 
             })
@@ -207,6 +214,7 @@
                 const choosedLang = document.querySelector('input[name="langOptions"]:checked').attributes["id"].value;
                 langManager = new LanguageManager(choosedLang);
                 langManager.setTextsByLanguage();
+                generateHints();
             }
 
 
