UI fix and database updating

--- a/index.html
+++ b/index.html
@@ -111,9 +111,11 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-3">
+            <div class="col-1">
                 <img src="img/hint-ideia.png" id="hint" alt="" data-bs-toggle="popover" data-bs-trigger="hover focus"
                     title="Dica/Por/Hint" data-bs-content="'" data-bs-html="true" />
+            </div>
+            <div class="col-11">
                 <span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left"
                         viewBox="0 0 16 16">
